infra/charts/sample/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample
  template:
    metadata:
      labels:
        app: nginx-sample
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-sample
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: nginx-sample
        configMap:
          name: nginx-sample
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample
spec:
  selector:
    app: nginx-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30007
  # type: LoadBalancer
