infra/charts/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample
  annotations:
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  rules:
  - host: homelab.quanianitis.com
    http:
      paths:
      - backend:
          service:
            name: nginx-sample
            port:
              number: 80
        path: /
        pathType: Prefix
